Add and modify models + modify api-docs
