# models/StatusComment.js
@@ -1,9 +1,10 @@
 const mongoose = require('mongoose');
 
-const commentSchema = new mongoose.Schema({
+const statusCommentSchema = new mongoose.Schema({
   postId: { type: mongoose.Schema.Types.ObjectId, ref: 'UserStatus', required: true },
   commenterId: { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true },
   commentText: { type: String, required: true }
 }, { timestamps: true });
 
-module.exports = mongoose.model('Comment', commentSchema);
+module.exports = mongoose.model('StatusComment', statusCommentSchema);
+
